# musclemap-data

./: .download_progress.json  .gitignore  .progress_checkpoint.json  CURSOR_MAIN_PROMPT.md  Makefile  README.md  SCAFFOLD_PROMPT.md  TASK_PROMPTS.md  config.yaml  environment.yml  pyproject.toml  requirements-opensim-env.txt
.cursor/rules/: 00-project.mdc  01-platform.mdc  02-code-conventions.mdc  03-notebook.mdc  04-opensim-api.mdc  05-no-go.mdc
notebooks/: 01_explore_and_tune.ipynb
scripts/: download_dataset.py  run_batch.py  setup_check.py
src/: __init__.py  dash_app.py  dataset_io.py  notebook_helpers.py  opensim_pipeline.py  smplx_joint_regressor.py  smplx_mesh_preview.py  smplx_to_opensim.py  utils.py  visualization.py
src/templates/: ik_setup.xml  rra_setup.xml  static_opt_setup.xml
tests/: __init__.py  test_dataset_io.py  test_integration_single_seq.py  test_opensim_pipeline.py  test_smplx_mesh_preview.py  test_smplx_to_opensim.py  test_utils.py  test_visualization.py
