[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "musclemap-data"
version = "0.1.0"
description = "Motion-X++ SMPL-X motion to muscle activations via OpenSim"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: end-to-end OpenSim + local Motion-X data (CI: pytest -m \"not integration\")",
]
